--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,19 @@
 {
   "root": true,
-  "ignorePatterns": [
-    "projects/**/*"
-  ],
+  "ignorePatterns": ["projects/**/*"],
   "overrides": [
     {
-      "files": [
-        "*.ts"
-      ],
+      "files": ["*.ts"],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+				"prettier" // manter sempre por último
       ],
       "rules": {
+				"no-underscore-dangle": ["error"],
+        "@typescript-eslint/member-ordering": "error",
         "@angular-eslint/directive-selector": [
           "error",
           {
@@ -34,9 +33,7 @@
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
+      "files": ["*.html"],
       "extends": [
         "plugin:@angular-eslint/template/recommended",
         "plugin:@angular-eslint/template/accessibility"
