--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,27 @@
-{}
+{
+	"singleQuote": true,
+	"trailingComma": "all",
+	"useTabs": true,
+	"tabWidth": 2,
+	"semi": true,
+	"arrowParens": "avoid",
+	"bracketSpacing": true,
+	"bracketSameLine": true,
+	"printWidth": 100,
+	"overrides": [
+		{
+			"files": "*.json",
+			"options": {
+				"printWidth": 200
+			}
+		}
+	],
+	"embeddedLanguageFormatting": "auto",
+	"htmlWhitespaceSensitivity": "css",
+	"proseWrap": "preserve",
+	"plugins": ["@trivago/prettier-plugin-sort-imports"],
+	"importOrder": ["^@angular/(.*)$","^@core/(.*)$", "^@shared/(.*)$", "^@server/(.*)$", "^@app/(.*)$", "^[./]"],
+	"importOrderParserPlugins": ["typescript", "classProperties", "decorators-legacy"],
+	"importOrderSeparation": true,
+	"importOrderSortSpecifiers": true
+}
