feat: initial version

--- a/.prettierrc
+++ b/.prettierrc
@@ -20,7 +20,7 @@
 	"htmlWhitespaceSensitivity": "css",
 	"proseWrap": "preserve",
 	"plugins": ["@trivago/prettier-plugin-sort-imports"],
-	"importOrder": ["^@angular/(.*)$","^@core/(.*)$", "^@shared/(.*)$", "^@server/(.*)$", "^@app/(.*)$", "^[./]"],
+	"importOrder": ["^@angular/core(.*)$", "^@angular/(.*)$", "^@core/(.*)$", "^@shared/(.*)$", "^@server/(.*)$", "^@app/(.*)$", "^[./]"],
 	"importOrderParserPlugins": ["typescript", "classProperties", "decorators-legacy"],
 	"importOrderSeparation": true,
 	"importOrderSortSpecifiers": true
